--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_9c5ced05c1ca_key -iv $encrypted_9c5ced05c1ca_iv -in deploy.secret.key.enc -out deploy.secret.key -d
 install:
   - export TRAVIS_COMMIT_MSG="$(git log --format=%B --no-merges -n 1)"
-  - pip install liquidluck
+  - pip install -r requirements.txt
   - git config --global user.email "autocommit@aniketpanse.in"
   - git config --global user.name "Autocommit"
   - mkdir deploy
